# serializer version: 1
# name: test_index_missing_in_plan_downgrade_snapshot[warning]
  tuple(
    tuple(
      'cargo %s for crate %s could not resolve sibling dependency %s from crates.io; continuing because the unpublished workspace dependency override is enabled',
      tuple(
        'package',
        'beta',
        'alpha',
      ),
    ),
  )
# ---
# name: test_index_missing_out_of_order_message_snapshot[message]
  '''
  cargo package failed for crate beta with exit code 1: error: failed to prepare local package for uploading
  <blank>
  Caused by:
    failed to select a version for the requirement `alpha = "^0.1.0"`
    candidate versions found which didn't match: 0.0.1
    location searched: crates.io index
    required by package `beta v0.1.0`; dependency 'alpha' appears after crate 'beta' in publish order, so it will not be available when this crate is published. Adjust publish.order so the dependency comes first, or omit publish.order and rely on dependency-derived topological sorting.
  '''
# ---
# name: test_index_missing_out_of_order_message_snapshot[warning]
  tuple(
    tuple(
      'cargo %s for crate %s failed due to unindexed sibling dependency %r which appears after the current crate in publish order; cannot continue',
      tuple(
        'package',
        'beta',
        'alpha',
      ),
    ),
  )
# ---
# name: test_index_missing_out_of_plan_message_snapshot[message]
  '''
  cargo package failed for crate beta with exit code 1: error: failed to prepare local package for uploading
  Caused by:
    failed to select a version for the requirement `external_crate = "^1"`
    location searched: crates.io index; missing dependency 'external_crate' is not part of the current publish plan, so the unpublished workspace dependency override cannot help. Publish or index the dependency first.
  '''
# ---
# name: test_index_missing_out_of_plan_message_snapshot[warning]
  tuple(
    tuple(
      'cargo %s for crate %s failed due to unindexed dependency %r which is not in the current publish plan; cannot continue',
      tuple(
        'package',
        'beta',
        'external_crate',
      ),
    ),
  )
# ---
# name: test_index_missing_version_message_snapshot[flag_disabled][message]
  '''
  cargo package failed for crate beta with exit code 1: error: failed to prepare local package for uploading
  <blank>
  Caused by:
    failed to select a version for the requirement `alpha = "^0.1.0"`
    candidate versions found which didn't match: 0.0.1
    location searched: crates.io index
    required by package `beta v0.1.0`; dependency 'alpha' is scheduled in this publish run but is not yet on crates.io. Enable the dry-run unpublished workspace dependency override, or follow the staged-publish workaround.
  '''
# ---
# name: test_index_missing_version_message_snapshot[flag_disabled][warning]
  tuple(
    tuple(
      'cargo %s for crate %s failed due to unindexed sibling dependency %r (in plan); enable the dry-run unpublished workspace dependency override to downgrade to a warning, or follow the staged-publish workaround',
      tuple(
        'package',
        'beta',
        'alpha',
      ),
    ),
  )
# ---
# name: test_index_missing_version_message_snapshot[name_extraction_failure][message]
  '''
  cargo package failed for crate beta with exit code 1: error: failed to prepare local package for uploading
  <blank>
  Caused by:
    failed to select a version for the requirement without a quoted name
    location searched: crates.io index
  '''
# ---
# name: test_index_missing_version_message_snapshot[name_extraction_failure][warning]
  tuple(
    tuple(
      'cargo %s for crate %s matched index-missing-version markers but the dependency name could not be extracted; treating as fatal',
      tuple(
        'package',
        'beta',
      ),
    ),
  )
# ---
# name: test_pipeline_info_log_snapshot[dry_run]
  tuple(
    tuple(
      'Publication mode: dry-run (batched two-phase pipeline)',
      tuple(
      ),
    ),
    tuple(
      'Dry-run pipeline: packaging complete; starting publish phase',
      tuple(
      ),
    ),
  )
# ---
# name: test_pipeline_info_log_snapshot[live]
  tuple(
    tuple(
      'Publication mode: live (interleaved per-crate pipeline)',
      tuple(
      ),
    ),
    tuple(
      'Live pipeline: starting crate %s',
      tuple(
        'alpha',
      ),
    ),
    tuple(
      'Live pipeline: completed crate %s',
      tuple(
        'alpha',
      ),
    ),
    tuple(
      'Live pipeline: starting crate %s',
      tuple(
        'beta',
      ),
    ),
    tuple(
      'Live pipeline: completed crate %s',
      tuple(
        'beta',
      ),
    ),
    tuple(
      'Live pipeline: starting crate %s',
      tuple(
        'gamma',
      ),
    ),
    tuple(
      'Live pipeline: completed crate %s',
      tuple(
        'gamma',
      ),
    ),
  )
# ---
# name: test_run_rejects_allow_unpublished_with_live
  '--allow-unpublished-workspace-deps is only valid in dry-run mode; re-run without --live.'
# ---
